service.yml
apiVersion: v1
kind: Service
metadata:
    name: nextapp-service
spec:
    selector:
        app: nextapp
    ports:
        - protocol: TCP
          port: 3000
          targetPort: 3000
    type: ClusterIP
